--- a/app/ExamAttempt/edit/examAttempt-edit.component.html
+++ b/app/ExamAttempt/edit/examAttempt-edit.component.html
@@ -109,7 +109,7 @@ Points {{currentAttempt.total}}
             <div class="col-md-4">Criterea</div>
             <div class="col-md-2">Impact from mistakes</div>
             <div class="col-md-2">Adjustment</div>
-            <div class="col-md-3">final</div>
+            <div class="col-md-3">Final impact</div>
         </div>
         <hr style="margin:0px; border-top: 1px solid #ddd;" />
 
