--- a/app/ExamAttempt/edit/examAttempt-edit.component.html
+++ b/app/ExamAttempt/edit/examAttempt-edit.component.html
@@ -1,5 +1,5 @@
 <h2>
-    exam INF220, student: 1234567789
+    Exam on Course {{currentExam.course.code}}, Student: {{currentAttempt.studentID}}
 </h2>
 Points {{currentAttempt.total}}
 <div class="container panel">
@@ -47,7 +47,6 @@ Points {{currentAttempt.total}}
                         </div>
                     </div>
 
-
                     <div class="row" style="margin-bottom: 10px; font-weight: bold">
                         <div class="col-md-4">Justification</div>
                         <div class="col-md-6">Censor defined severity</div>
@@ -59,36 +58,131 @@ Points {{currentAttempt.total}}
                             <div [formGroupName]="i" class="row" style="padding:5px">
                                 <div class="col-md-4">
 
-                                    <input type="checkbox" formControlName="apliesTo" style="width:20px; height:20px" (change)="changeArg($event.target.checked, arg.value.id, arg.value.questionID)"/>
-
+                                    <input type="checkbox" formControlName="apliesTo" style="width:20px; height:20px" (change)="changeArg($event.target.checked, arg.value.id, arg.value.questionID)"
+                                    />
                                     <div style="display:inline; vertical-align:super"> {{arg.value.text}} </div>
-
                                 </div>
                                 <div class="col-md-6" *ngIf="arg.value.variable">
 
                                     <span> {{arg.value.maxMistakeText}} </span>
-
                                     <input type="range" min="arg.value.maxMistakeWeight" max="arg.value.minMistakeWeight" value="arg.value.maxMistakeWeight"
+                                        formControlName="variableVal" (change)="changeSlider($event.target.value, arg.value.id, arg.value.questionID)"
                                     />
                                     <span class="pull-right"> {{arg.value.minMistakeText}} </span>
-
                                 </div>
                             </div>
                         </div>
                     </div>
 
-
                     <div class="form-group">
                         <label>Adjustment</label>
-                        <input type="number" value="0" class="form-control" formControlName="adjustment" />
+                        <input type="number" value="0" class="form-control" formControlName="adjustment" (blur)="changedAdjustment(myForm.value.id, $event)"
+                        />
                     </div>
 
                     <div class="form-group">
                         <label>Comnment</label>
-                        <input type="text" class="form-control" formControlName="note" />
+                        <input type="text" class="form-control" formControlName="note" (change)="changedNote(myForm.value.id, $event)" />
+                    </div>
+                </div>
+
+
+
+                <div class="container panel" *ngFor="let question of myForm.controls.childs.controls; let a=index;">
+
+                    <div [formGroup]="question">
+                        <div class="panel-heading">
+                            <h3>Q{{currentQuestionIndex+1}}.{{a+1}}: {{question.value.questionText}}</h3>
+                            <div class="row">
+                                <div class="col-xs-2">
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" formControlName="completion" (change)="changeCompletion()" value="Correct" />
+                                            Correct</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-2">
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" formControlName="completion" (change)="changeCompletion()" value="Blank" />
+                                            Blank</label>
+                                    </div>
+                                </div>
+                                <div class="col-xs-2">
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" formControlName="completion" (change)="changeCompletion()" value="Attempted"/>
+                                            Attempted</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="panel-body">
+                            <div class="container panel" style="background-color: lavender">
+                                <div class="panel-heading">
+                                    <h4>Justifications</h4>
+                                </div>
+                                <div class="panel-body">
+                                    <div class="form-group">
+                                        <label>Points</label>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 1em;"
+                                                [attr.aria-valuenow]="question.value.total" [style.width]="(question.value.total/100)*100 + '%'">
+                                                {{question.value.total}}
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row" style="margin-bottom: 10px; font-weight: bold">
+                                        <div class="col-md-4">Justification</div>
+                                        <div class="col-md-6">Censor defined severity</div>
+                                    </div>
+                                    <hr style="margin:0px; border-top: 1px solid #ddd;" />
+                                    <div formArrayName="arguments">
+                                        <div *ngFor="let arg of question.controls.arguments.controls; let i=index">
+                                            <hr style="margin:0px; border-top: 1px solid #ddd;" />
+                                            <div [formGroupName]="i" class="row" style="padding:5px">
+                                                <div class="col-md-4">
+
+                                                    <input type="checkbox" formControlName="apliesTo" style="width:20px; height:20px" (change)="changeArg($event.target.checked, arg.value.id, arg.value.questionID)"
+                                                    />
+                                                    <div style="display:inline; vertical-align:super"> {{arg.value.text}} </div>
+                                                </div>
+                                                <div class="col-md-6" *ngIf="arg.value.variable">
+
+                                                    <span> {{arg.value.maxMistakeText}} </span>
+                                                    <input type="range" min="arg.value.maxMistakeWeight" max="arg.value.minMistakeWeight" value="arg.value.maxMistakeWeight"
+                                                        formControlName="variableVal" (change)="changeSlider($event.target.value, arg.value.id, arg.value.questionID)"
+                                                    />
+                                                    <span class="pull-right"> {{arg.value.minMistakeText}} </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Adjustment</label>
+                                        <input type="number" value="0" class="form-control" formControlName="adjustment" (blur)="changedAdjustment(question.value.id, $event)"
+                                        />
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Comnment</label>
+                                        <input type="text" class="form-control" formControlName="note" (change)="changedNote(question.value.id, $event)" />
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
                     </div>
                 </div>
             </div>
+
+
+
 
         </div>
     </form>
